...
                    }
                }
            },
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Text),
            isPassword = false,
            borderColor = if (usernameError.value != null) Main3 else Main1,
            testTag = "usernameField"
        )
    )
    if (usernameError.value != null) {
        Text(
            text = usernameError.value ?: "",
            color = Main3,
...
                emailError = null
            },
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Email),
            isPassword = false,
            maxLength = 250,
            borderColor = if (emailError != null) Main3 else Main1,
            testTag = "emailField"
        )
    )
    if (emailError != null) {
        Text(
            text = emailError ?: "",
            color = Main3,
...
                phoneError = null
            },
            phoneNumber = phoneNumber,
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Phone),
            selectedCountry = selectedCountry,
            borderColor = if (phoneError != null) Main3 else Main1,
            testTag = "phoneField"
        )
    )
    if (phoneError != null) {
        Text(
            text = phoneError ?: "",
            color = Main3,
...
                password = newValue
            },
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Text),
            isPassword = true,
            maxLength = 30,
            borderColor = if (passwordError != null) Main3 else Main1,
            testTag = "passwordField"
        )
    )
    if (passwordError != null) {
        Text(
            text = passwordError ?: "",
            color = Main3,
...
                checkError = null
            },
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Text),
            isPassword = true,
            maxLength = 30,
            borderColor = if (checkError != null) Main3 else Main1,
            testTag = "checkPasswordField"
        )
    )
    if (checkError != null) {
        Text(
            text = checkError ?: "",
            color = Main3,
...
        )
    }
}

@Composable
internal fun securityQuestionsFields(securityQuestions: List<SecurityQuestion>) {
    val testTags: List<String> = listOf("questionField1", "questionField2", "questionField3")
    securityQuestions.forEachIndexed { index, question ->
        Spacer(modifier = Modifier.height(8.dp))
        Text(
            text = question.question,
            textAlign = TextAlign.Left,
            modifier = Modifier.fillMaxWidth(),
...
