...
                    .fillMaxWidth()
                    .background(background, shape = RoundedCornerShape(15.dp))
                    .testTag(phoneData.testTag)
            )

            if (isPopupOpen) {
                flagDialog(
                    onDismiss = { isPopupOpen = false },
                    onCountrySelected = { country ->
                        phoneData.selectedCountry.value = country
                        phoneNumber = TextFieldValue(
                            text = country.phonePrefix,
                            selection = TextRange(country.phonePrefix.length)
...
                value = searchQuery,
                onValueChange = { searchQuery = it },
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Text),
                isPassword = false,
                placeholder = "Rechercher un pays",
                trailingIcon = Icons.Filled.Search,
                testTag = "searchField"
            )
        )
        Spacer(modifier = Modifier.height(16.dp))

        val filteredCountries = countries.filter { country ->
            country.name.contains(searchQuery, ignoreCase = true) ||
...
            ) { isPopupOpen = true }
            .background(
                color = Color.Transparent,
                shape = RoundedCornerShape(8.dp)
            )
            .padding(horizontal = 8.dp, vertical = 4.dp)
            .testTag("flagClickable"),
    ) {
        Row(verticalAlignment = Alignment.CenterVertically) {
            Image(
                painter = painterResource(id = phoneData.selectedCountry.value.flagResId),
                contentDescription = "Flag",
                contentScale = ContentScale.Crop,
...
