...
import com.example.tempomobileapp.ui.theme.text

@Composable
fun successDialog(navController: NavController) {
    dialogCustom(
        onDismiss = { navController.navigate("login") },
        testTag = "signinValidationDialog"
    ) {
        Column {
            val vectorDrawable = ContextCompat.getDrawable(
                LocalContext.current,
                R.drawable.fond_etoiles
            )
...
